# Generic

./: CMakeLists.txt
examples/: CMakeLists.txt  serializer.cpp  typelist.cpp
include/generic/: algorithm.hpp  big_endian.hpp  little_endian.hpp  numeric.hpp  serializer.hpp  type_traits.hpp  typelist.hpp
tests/: CMakeLists.txt  numeric.cpp
